@@ -1,3 +1,9 @@
+2001-06-22  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>
+
+	* libmath/stubs.c: New file.
+	* libmath/Makefile.am (libmath_la_SOURCES): Add.
+	* libmath/Makefile.in.  Regenerate.
+
 2001-06-21  Phil Edwards  <pme@sources.redhat.com>
 
 	* include/backward/algo.h:  Add "GPL plus runtime exception" comment.
